Added scip CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ defSolver(cplex cplex cplexmp)
 defSolver(xpress xpress xpress)
 defSolver(cbcmp cbc cbcmp)
 defSolver(copt copt copt)
+defSolver(scip scip scip)
 
 set(BUILD_AMPLS "" CACHE STRING "Comma-separated list of solver drivers to build,  set to \"all\" to build all")
 
@@ -120,12 +121,14 @@ if(hasParent)
   set(cplex_BASE_DIR ${SOLVERLIBS}/cplex/2211)
   set(copt_BASE_DIR ${SOLVERLIBS}/copt/6.5.2)
   set(xpress_BASE_DIR ${SOLVERLIBS}/xpress/42.01.01)
+  set(scip_BASE_DIR ${SOLVERLIBS}/scip)
 else()
   set(SOLVERLIBS ${CMAKE_CURRENT_SOURCE_DIR}/libs)
   set(gurobi_BASE_DIR ${SOLVERLIBS}/gurobi)
   set(cplex_BASE_DIR ${SOLVERLIBS}/cplex)
   set(copt_BASE_DIR ${SOLVERLIBS}/copt)
   set(xpress_BASE_DIR ${SOLVERLIBS}/xpress)
+  set(scip_BASE_DIR ${SOLVERLIBS}/scip)
 endif()
 
 function(CreateSolverLib name includedirs lib)
@@ -190,6 +193,10 @@ if(WIN32)
       ${xpress_BASE_DIR}/${sys}/xprs.dll
       IMPORTLIB ${xpress_BASE_DIR}/${sys}/xprs.lib)
 
+    CreateSolverLib(scip-solverlib ${scip_BASE_DIR}/include
+      ${scip_BASE_DIR}/${sys}/libscip.dll
+      IMPORTLIB ${scip_BASE_DIR}/${sys}/libscip.lib)
+
     set(AMPLS_DIR ${SOLVERLIBS}/ampls/win64) # AMPL base driver library locations
 elseif(APPLE)
     set(sys "lib/osx64")
@@ -205,6 +212,9 @@ elseif(APPLE)
    CreateSolverLib(xpress-solverlib ${xpress_BASE_DIR}/include
       ${xpress_BASE_DIR}/${sys}/libxprs.dylib)
 
+    CreateSolverLib(scip-solverlib ${scip_BASE_DIR}/include
+      ${scip_BASE_DIR}/${sys}/libscip.8.0.3.0.dylib)
+
     set(AMPLS_DIR ${SOLVERLIBS}/ampls/osx64) # AMPL base driver library locations
 else()
     set(sys "lib/linux64")
@@ -218,7 +228,10 @@ else()
       ${copt_BASE_DIR}/${sys}/libcopt.so)
     
     CreateSolverLib(xpress-solverlib ${xpress_BASE_DIR}/include
-      ${xpress_BASE_DIR}/${sys}/libxprs.so.42)
+      ${xpress_BASE_DIR}/${sys}/libxprs.so.41)
+
+    CreateSolverLib(scip-solverlib ${scip_BASE_DIR}/include
+      ${scip_BASE_DIR}/${sys}/libscip.8.0.3.0.so)
 
     set(AMPLS_DIR ${SOLVERLIBS}/ampls/linux64) # AMPL base driver library locations
 endif()
@@ -228,6 +241,7 @@ set(cplex-solver-deps cplex-solverlib)
 set(copt-solver-deps copt-solverlib)
 set(xpress-solver-deps xpress-solverlib)
 set(cbc-solver-deps Coin::CbcSolver)
+set(scip-solver-deps scip-solverlib)
 
  # Get rid of warning in newer versions of cmake
 macro(ADD_SWIG_LIBRARY name language)
@@ -258,7 +272,11 @@ function(AddSolverStub solver targetbase libname)
   # i'll need just one
   set(IMPORTLIB ${targetbase}-lib)
   if(NOT TARGET ${IMPORTLIB})
-      FindSolverLib(${IMPORTLIB} ${targetbase})
+      set(IMPORTLIB ${targetbase}mp-lib)
+      if(NOT TARGET ${IMPORTLIB})
+        set(IMPORTLIB ${targetbase}-lib)
+        FindSolverLib(${IMPORTLIB} ${targetbase})
+      endif()
   endif()
 
   add_prefix(
@@ -327,7 +345,7 @@ function(AddSolverStub solver targetbase libname)
           add_to_folder(${targetbase}/swig ${solver}-common)
           add_subdirectory(${DIR_PYTHON})
           if(WIN32)
-            add_subdirectory(${DIR_CSHARP})
+          #  add_subdirectory(${DIR_CSHARP})
           endif()
       endif()
   endif()
@@ -346,7 +364,7 @@ endforeach()
   if(BUILD_SWIG_WRAPPERS AND SWIG_FOUND)
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/python/ampls)
   if(WIN32)
-    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/csharp/ampls)
+    #add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/csharp/ampls)
   endif()
 endif()
 
