--- a/python/ampls/CMakeLists.txt
+++ b/python/ampls/CMakeLists.txt
@@ -1,9 +1,15 @@
 set(TESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/../test)
+set(EXAMPLES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../examples)
 if(MSVC)
   include_external_msproject(
     python-tests
     ${TESTDIR}/python-tests.pyproj
     python-tests)
+
+    include_external_msproject(
+    python-examples
+    ${EXAMPLES_DIR}/python-examples.pyproj
+    python-examples)
 endif()
 
 
@@ -22,4 +28,4 @@ add_custom_target(python-tests-run
     DEPENDS ${PYTHON_DEPS})
 
 
-add_to_folder(ampls/test python-tests-run python-tests)
+add_to_folder(ampls/test python-tests-run python-tests python-examples)
