Added conveniency entry point for addConstraint.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,7 +117,7 @@ file(WRITE ${GENERATED_INCLUDE_DIR}/test-config.h
 get_directory_property(hasParent PARENT_DIRECTORY)
 if(hasParent)
   set(SOLVERLIBS ${BASE_SOLVER_LIBS})
-  set(gurobi_BASE_DIR ${SOLVERLIBS}/gurobi/1100)
+  set(gurobi_BASE_DIR ${SOLVERLIBS}/gurobi/1101)
   set(cplex_BASE_DIR ${SOLVERLIBS}/cplex/2211)
   set(copt_BASE_DIR ${SOLVERLIBS}/copt/6.5.2)
   set(xpress_BASE_DIR ${SOLVERLIBS}/xpress/42.01.01)
@@ -173,6 +173,7 @@ set(GRBINC ${gurobi_BASE_DIR}/include)
 if(hasParent)
     set(GRBINC ${GRBINC}/gurobi)
 endif()
+message("Set GRBINC = ${GRBINC}")
 if(WIN32)
     set(sys "lib/win64")
     
