--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,8 +119,8 @@ if(hasParent)
   set(SOLVERLIBS ${BASE_SOLVER_LIBS})
   set(gurobi_BASE_DIR ${SOLVERLIBS}/gurobi/1101)
   set(cplex_BASE_DIR ${SOLVERLIBS}/cplex/2211)
-  set(copt_BASE_DIR ${SOLVERLIBS}/copt/6.5.2)
-  set(xpress_BASE_DIR ${SOLVERLIBS}/xpress/42.01.01)
+  set(copt_BASE_DIR ${SOLVERLIBS}/copt/7.0.3)
+  set(xpress_BASE_DIR ${SOLVERLIBS}/xpress/42.01.05)
   set(scip_BASE_DIR ${SOLVERLIBS}/scip)
 else()
   set(SOLVERLIBS ${CMAKE_CURRENT_SOURCE_DIR}/libs)
@@ -289,6 +289,10 @@ function(AddSolverStub solver targetbase libname)
   target_link_libraries(${TARGETNAME} PUBLIC ampls ${libs} ${IMPORTLIB})
   target_include_directories(
     ${TARGETNAME} PUBLIC ${DIR_CPP_INCLUDE} ${ampls_INCLUDE} ${additionalincludes})
+  message("add_library(${TARGETNAME} STATIC ${DRV_SOURCES})
+          target_link_libraries(${TARGETNAME} PUBLIC ampls ${libs} ${IMPORTLIB})
+          target_include_directories(${TARGETNAME} PUBLIC ${DIR_CPP_INCLUDE} ${ampls_INCLUDE} ${additionalincludes})")
+
   add_to_folder(${targetbase} ${TARGETNAME})
   if(NOT WIN32)
     target_compile_options(${TARGETNAME} PRIVATE -fPIC)
