--- a/cpp/ampls/CMakeLists.txt
+++ b/cpp/ampls/CMakeLists.txt
@@ -85,14 +85,14 @@ macro(addExample name category src)
 endmacro()
 
 if(PREPROCESSORDEFS)
-    set(EXAMPLES loadModel getInformation errorDetection)
+    set(EXAMPLES loadModel getInformation errorDetection stoppingCriteria)
     foreach(e ${EXAMPLES})
         addExample(${e} ampls ${ampls_DIR}/examples/${e}.cpp)
     endforeach()
     
     if(BUILD_AMPLAPI_EXAMPLES)
       set(AMPLAPI_EXAMPLES cuttingStock addEntities tsp multipleModels multipleSolutions setOptions 
-                          benders)
+                           benders)
       foreach(e ${AMPLAPI_EXAMPLES})
         addExample(${e} ampls ${ampls_DIR}/examples/${e}.cpp)
         target_link_libraries(ampls-${e} PRIVATE amplapi)
